module(
    name = "srpc",
    version = "0.10.3",
)

bazel_dep(name = "rules_proto", version = "4.0.0")
bazel_dep(name = "rules_git", version = "0.1.0")

use_extension(
    "@rules_git//git:repositories.bzl",
    "git_repository",
    name = "workflow",
    commit = "3e8f57160a4d1d9e2510bb37767c236351c34a41",
    remote = "https://github.com/sogou/workflow.git"
)

use_extension(
    "@rules_git//git:repositories.bzl",
    "git_repository",
    name = "lz4",
    tag = "v1.9.3",
    remote = "https://github.com/lz4/lz4.git",
    build_file = "@//third_party:lz4.BUILD"
)

use_extension(
    "@rules_git//git:repositories.bzl",
    "git_repository",
    name = "snappy",
    tag = "1.1.9",
    remote = "https://github.com/google/snappy.git",
    build_file = "@//third_party:snappy.BUILD"
)

# 加载并使用扩展
use_repo(workflow)
use_repo(lz4)
use_repo(snappy)
