module(
    name = "srpc",
    version = "0.10.3",
)

bazel_dep(name = "rules_proto", version = "4.0.0")
bazel_dep(name = "rules_git", version = "0.1.0")

use_extension(
    "@rules_git//git:repositories.bzl",
    "git_repository",
    name = "workflow_repo"
)

use_extension(
    "@rules_git//git:repositories.bzl",
    "git_repository",
    name = "lz4_repo"
)

use_extension(
    "@rules_git//git:repositories.bzl",
    "git_repository",
    name = "snappy_repo"
)

workflow_repo(
    name = "workflow",
    commit = "3e8f57160a4d1d9e2510bb37767c236351c34a41",
    remote = "https://github.com/sogou/workflow.git"
)

lz4_repo(
    name = "lz4",
    tag = "v1.9.3",
    remote = "https://github.com/lz4/lz4.git",
    build_file = "@//third_party:lz4.BUILD"
)

snappy_repo(
    name = "snappy",
    commit = "e0a8a4b9b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1",
    remote = "https://github.com/google/snappy.git",
    build_file = "@//third_party:snappy.BUILD"
)

use_repo(workflow = "workflow")
use_repo(lz4 = "lz4")
use_repo(snappy = "snappy")
