module(
    name = "srpc",
    version = "0.10.3",
)

bazel_dep(name = "rules_proto", version = "4.0.0")

git_repository(
    name = "workflow",
    commit = "3e8f57160a4d1d9e2510bb37767c236351c34a41",
    remote = "https://github.com/sogou/workflow.git"
)

git_repository(
    name = "lz4",
    tag = "v1.9.3",
    remote = "https://github.com/lz4/lz4.git",
    build_file = "@//third_party:lz4.BUILD"
)

git_repository(
    name = "snappy",
    commit = "e0a8a4b9b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1b1",
    remote = "https://github.com/google/snappy.git",
    build_file = "@//third_party:snappy.BUILD"
)
